--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Java CI
+name: build
 
 on:
   - push
@@ -20,25 +20,24 @@ jobs:
           gradle-version: 8.3
 #      - run: ./gradlew checkstyleMain
 #      - run: ./gradlew test
-
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-    if: ${{ github.event_name == 'push' }}
-
-    steps:
-      - uses: actions/checkout@v3
-      - uses: docker/setup-buildx-action@v2
-
-      - uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - uses: docker/build-push-action@v4
-        with:
-          context: .
-          push: true
-          cache-from: hexletcomponents/java-javalin-example:latest
-          cache-to: type=inline
-          tags: hexletcomponents/java-javalin-example:latest
+#  deploy:
+#    needs: build
+#    runs-on: ubuntu-latest
+#    if: ${{ github.event_name == 'push' }}
+#
+#    steps:
+#      - uses: actions/checkout@v3
+#      - uses: docker/setup-buildx-action@v2
+#
+#      - uses: docker/login-action@v2
+#        with:
+#          username: ${{ secrets.DOCKER_USERNAME }}
+#          password: ${{ secrets.DOCKER_PASSWORD }}
+#
+#      - uses: docker/build-push-action@v4
+#        with:
+#          context: .
+#          push: true
+#          cache-from: hexletcomponents/java-javalin-example:latest
+#          cache-to: type=inline
+#          tags: hexletcomponents/java-javalin-example:latest
