--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,14 +16,16 @@ jobs:
           distribution: 'temurin'
       - name: Build with Gradle
         uses: gradle/gradle-build-action@v2
+        with:
+          gradle-version: 8.3
       - name: Publish code coverage
-          uses: paambaati/codeclimate-action@v3.1.1
-          env:
-            CC_TEST_REPORTER_ID: ${{secrets.CC_TEST_REPORTER_ID}}
-            JACOCO_SOURCE_PATH: app/src/main/java
-          with:
-            coverageCommand: make report
-            coverageLocations: ${{github.workspace}}/app/build/reports/jacoco/test/jacocoTestReport.xml:jacoco
+        uses: paambaati/codeclimate-action@v3.1.1
+        env:
+          CC_TEST_REPORTER_ID: ${{secrets.CC_TEST_REPORTER_ID}}
+          JACOCO_SOURCE_PATH: app/src/main/java
+        with:
+          coverageCommand: make report
+          coverageLocations: ${{github.workspace}}/app/build/reports/jacoco/test/jacocoTestReport.xml:jacoco
 #      - run: ./gradlew checkstyleMain
 #      - run: ./gradlew test
 #  deploy:
